dev/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp
  labels:
    app: todoapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: todoapp
  # pod spec begins here
  template:
    metadata:
      labels:
        app: todoapp
    spec:
      containers:
        - name: todoapp
          image: registry.digitalocean.com/do/my-python-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
