dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoapp
spec:
  selector:
    app: todoapp
  ports:
  - port: 8888
    protocol: TCP
    targetPort: 8888
