dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "joint.software"
    http:
      paths:
      - pathType: Prefix
        path: "/testpath"
        backend:
          service:
            name: todoapp
            port:
              number: 80
